--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -25,7 +25,7 @@
             <i class="far fa-user"></i> Campos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/logout">Ver campos</a>
+            <a class="dropdown-item" href="/Campos">Ver campos</a>
             <a class="dropdown-item" href="/newCampos"> Nuevo campo </a>
           </div>
         </li>
