--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,5 +1,6 @@
+<div id="form-login">
 <form method="post" action="/login">
-    <div class="form-group">
+    <div class="form-group" id="user">
       <label for="user">Usuario</label>
       <input type="text" class="form-control" id="user" name="user">
       <small id="emailHelp" class="form-text text-muted">Ingrese su email.</small>
@@ -10,3 +11,4 @@
     </div>
     <button type="submit" class="btn btn-primary">Ingresar</button>
   </form>
+</div>
