--- a/assets/styles/myStyle.css
+++ b/assets/styles/myStyle.css
@@ -1,9 +1,5 @@
 body {
-  /*background-color: #1574e8;*/
-}
-
-#1{
-  background-image: url("assets/images/fondo1.png");
+  background-image: url("assets/images/green.svg");
 }
 #width4{
 }
