--- a/views/pages/campos.ejs
+++ b/views/pages/campos.ejs
@@ -3,10 +3,10 @@
 
     <div class="card bg-success">
         <div class="card-body text-center">
-            <p class="card-text"><%-campo.Nombre%></p>
-            <p class="card-text"><%-campo.CantHas%></p>
-            <p class="card-text"><%-campo.Localidad%></p>
-            <p class="card-text"><%-campo.Provincia%></p>
+            <p class="card-text"><%-campo.nombre%></p>
+            <p class="card-text"><%-campo.cantHas%></p>
+            <p class="card-text"><%-campo.localidad%></p>
+            <p class="card-text"><%-campo.provincia%></p>
         </div>
     </div>
 </div>
