--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,12 +1,12 @@
 <div id="form-login">
 <form method="post" action="/login">
     <div class="form-group" id="user">
-      <label for="user">Usuario</label>
+      <label for="user" id="campoLogin">Usuario</label>
       <input type="text" class="form-control" id="user" name="user">
       <small id="emailHelp" class="form-text text-muted">Ingrese su email.</small>
     </div>
     <div class="form-group">
-      <label for="pass">Contraseña</label>
+      <label for="pass" id="campoLogin">Contraseña</label>
       <input type="password" class="form-control" id="pass" name="pass">
     </div>
     <button type="submit" class="btn btn-primary">Ingresar</button>
