--- a/views/pages/newCampos.ejs
+++ b/views/pages/newCampos.ejs
@@ -1,23 +1,25 @@
-<form method="post" action="/newCampo">
+<div id="form-login">
+<form method="post" action="/newCampos">
     <div class="form-group">
-        <label for="name">Nombre</label>
+        <label for="name" id="campoLogin">Nombre </label>
         <input type="text" class="form-control" id="name" name="name">
         <small id="emailHelp" class="form-text text-muted">Ingrese un nombre.</small>
     </div>
     <div class="form-group">
-        <label for="cantHas">Cantidad de hectáreas</label>
+        <label for="cantHas" id="campoLogin">Cantidad de hectáreas</label>
         <input type="number" class="form-control" id="cantHas" name="cantHas">
         <small id="emailHelp" class="form-text text-muted">Ingrese la cantidad de hectáreas.</small>
     </div>
     <div class="form-group">
-        <label for="localidad">Localidad</label>
+        <label for="localidad" id="campoLogin">Localidad</label>
         <input type="text" class="form-control" id="localidad" name="localidad">
         <small id="emailHelp" class="form-text text-muted">Ingrese la localidad donde se encuentra.</small>
     </div>
     <div class="form-group">
-        <label for="provincia">Provincia</label>
+        <label for="provincia" id="campoLogin">Provincia</label>
         <input type="text" class="form-control" id="prov" name="prov">
         <small id="emailHelp" class="form-text text-muted">Ingrese la provincia donde se encuentra.</small>
     </div>
     <button type="submit" class="btn btn-primary">Guardar</button>
 </form>
+</div>
