--- a/views/pages/newStock.ejs
+++ b/views/pages/newStock.ejs
@@ -8,9 +8,9 @@
         <div class="form-group">
             <label for="tipo">Tipo</label>
             <select name="tipo" id="tipo">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
+                <option>Silo</option>
+                <option>Silo bolsa</option>
+                <option>Galpón</option>
             </select>
         </div>
         <div class="form-group">
