--- a/views/pages/stock.ejs
+++ b/views/pages/stock.ejs
@@ -28,8 +28,7 @@
                             </svg>
                             </a>
                         </td>
-                        <td><a href="/actividad"> Ver actividades</a></td>
-                        <td><a href="/actualizar/" <%-stock.id%>> Actualizar Stock</a></td>
+                        <td><a href="/actividad/<%-stock.id%>"> Ver actividades</a></td>
                     </tr>
                     </tbody>
                 </table>
