--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,7 +7,9 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/myStyle.css">
+    <link rel="stylesheet" href="/styles/presentacionActividad.css">
     <link rel="stylesheet" href="/styles/presentacionCampos.css">
+    <link rel="stylesheet" href="/styles/stock.css">
     <link rel="stylesheet" href="/styles/titulo.css">
     <!--STYLES END-->
   </head>
