--- a/views/pages/actividad.ejs
+++ b/views/pages/actividad.ejs
@@ -1,103 +1,34 @@
-<link href="" rel="stylesheet">
-<%#
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="styles/presentacionActividad.css">
 
-
-
-(function(){
-    'use strict';
-    var $ = jQuery;
-    $.fn.extend({
-        filterTable: function(){
-            return this.each(function(){
-                $(this).on('keyup', function(e){
-                    $('.filterTable_no_results').remove();
-                    var $this = $(this),
-                            search = $this.val().toLowerCase(),
-                            target = $this.attr('data-filters'),
-                            $target = $(target),
-                            $rows = $target.find('tbody tr');
-
-                    if(search == '') {
-                        $rows.show();
-                    } else {
-                        $rows.each(function(){
-                            var $this = $(this);
-                            $this.text().toLowerCase().indexOf(search) === -1 ? $this.hide() : $this.show();
-                        })
-                        if($target.find('tbody tr:visible').size() === 0) {
-                            var col_count = $target.find('tr').first().find('td').size();
-                            var no_results = $('<tr class="filterTable_no_results"><td colspan="'+col_count+'">No results found</td></tr>')
-                            $target.find('tbody').append(no_results);
-                        }
-                    }
-                });
-            });
-        }
-    });
-    $('[data-action="filter"]').filterTable();
-})(jQuery);
-
-$(function(){
-    // attach table filter plugin to inputs
-    $('[data-action="filter"]').filterTable();
-
-    $('.container').on('click', '.panel-heading span.filter', function(e){
-        var $this = $(this),
-                $panel = $this.parents('.panel');
-
-        $panel.find('.panel-body').slideToggle();
-        if($this.css('display') != 'none') {
-            $panel.find('.panel-body input').focus();
-        }
-    });
-    $('[data-toggle="tooltip"]').tooltip();
-})
-
-<div class="panel-heading">
-    <h3 class="panel-title" id="tituloTabla">Actividades</h3>
-    <div class="pull-right" id="filtro">
-        <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">
-            <i class="glyphicon glyphicon-filter"></i>
-        </span>
-    </div>
-</div>
-<div class="panel-body">
-    <input type="text" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Escriba una palabra para filtrar" />
-</div>
-%>
-<table class="table table-hover" id="tablaActividades">
+<table id="tablaActividades" class="cabecera">
     <thead>
     <tr>
         <th scope="col">Tipo</th>
         <th scope="col">kilos</th>
         <th scope="col">Subtotal</th>
         <th scope="col">Total</th>
-        <th scope="col" >Comentario</th>
+        <th scope="col">Comentario</th>
     </tr>
     </thead>
     <%for (let actividad of actividades) {%>
-    <table class="table table-hover" id="campoLogin">
-        <tbody>
-        <tr>
-            <td><%-actividad.tipo%></td>
-            <td><%-actividad.kilosUpdate%></td>
-            <td><%-actividad.subtotal%></td>
-            <td><% if(actividad.tipo === 'Egreso'){
-                    actividad.total = actividad.kilosUpdate - actividad.subtotal
-                %>
-                <%-actividad.total%>
-                <% } else{
-                    actividad.total = actividad.kilosUpdate + actividad.subtotal
-                %>
-                <%-actividad.total%>
-                <% } %>
-            </td>
-            <td><%-actividad.comentario%></td>
-        </tr>
-        </tbody>
-        <%}%>
-    </table>
+    <tbody>
+    <tr>
+        <td scope="row"><%-actividad.tipo%></td>
+        <td scope="rox"><%-actividad.kilosUpdate%></td>
+        <td scope="row"><%-actividad.subtotal%></td>
+        <td scope="row"><% if(actividad.tipo === 'Egreso'){
+                actividad.total = actividad.kilosUpdate - actividad.subtotal
+            %>
+            <%-actividad.total%>
+            <% } else{
+                actividad.total = actividad.kilosUpdate + actividad.subtotal
+            %>
+            <%-actividad.total%>
+            <% } %>
+        </td>
+        <td scope="row"><%-actividad.comentario%></td>
+    </tr>
+    </tbody>
+    <%}%>
 </table>
+
