--- a/views/pages/campos.ejs
+++ b/views/pages/campos.ejs
@@ -1,17 +1,13 @@
 <link rel="stylesheet" href="styles/presentacionCampos.css">
+<div class="row container-fluid">
 <% for (let campo of campos) { %>
-<section id="info">
-    <div class="row">
-        <div class="card">
-            <h2><%-campo.nombre%></h2>
-            <p>Cantidad de hectáreas: <%-campo.cantHas%></p>
-            <p>Localidad: <%-campo.localidad%></p>
-            <p>Provincia: <%-campo.provincia%></p>
-
-        </div>
+<div class="card text-white bg-info mb-3">
+    <div class="card-header"><%-campo.nombre%></div>
+    <div class="card-body">
+        <p>Cantidad de hectáreas: <%-campo.cantHas%></p>
+        <p>Localidad: <%-campo.localidad%></p>
+        <p>Provincia: <%-campo.provincia%></p>
     </div>
-</section>
+</div>
 <%}%>
-
-
-
+</div>
