--- a/views/pages/newActividad.ejs
+++ b/views/pages/newActividad.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles/presentacionActividad.css">
 <div id="form-login">
     <form method="POST" action="/newActividad/<%- req.params.id %>">
         <div class="form-group">
@@ -6,7 +7,7 @@
             <small id="emailHelp" class="form-text text-muted">Ingrese la cantidad de kilos actual.</small>
         </div>
         <div class="form-group">
-            <label for="tipo">Tipo</label>
+            <label for="tipo" id="tipoForm">Tipo</label>
             <select name="tipo" id="tipo">
                 <option>Egreso</option>
                 <option>Ingreso</option>
